--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,11 @@
     },
     "require": {
         "php": ">=5.5.9",
-        "symfony/finder": "^3.1",
-        "symfony/console": "^3.1",
-        "symfony/process": "^3.1"
+        "symfony/finder": "2.8.*|3.0.*",
+        "symfony/console": "2.8.*|3.0.*",
+        "symfony/process": "2.8.*|3.0.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.8.*"
+        "phpunit/phpunit": "4.*"
     }
 }
